--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "knuckleswtf/scribe": "^5.8",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.3",
+        "laravel/socialite": "^5.24",
         "laravel/tinker": "^2.10.1"
     },
     "require-dev": {
